CSS/Setup.scss
@import "../Fonts/font-styles.css";

* {
	margin: 0px;
	padding: 0px;
}

html, body {
	height: 100%;
}

.stack-wrapper {
	width: 100%;
	height:100%;
	display: flex;
	justify-content: center;
	position: relative;
	overflow: hidden;

	.stack-overlay {
		display: flex;
		justify-content: space-between;
		width: 100%;
		top: 50%;
		position: relative;
		transform: translateY(-50%);
		align-items: center;

		.left-content {
			display: flex; 
			justify-content: space-between;
			flex-flow: column wrap;
		}
		.right-content {
			display: flex; 
			justify-content: space-between;
			flex-flow: column wrap;
		}

	}
	.stack-surface {
		overflow: hidden;
		display: flex;
		justify-content: center;
		position: absolute;
		top: 0;
		left: 0;
		height: 100%;
		width: 100%;

		.center-content {
			width:980px;
			display:flex;
			//justify-content:center; // zoo-slide-(1,2,3)
			//align-items: center;
			//width:100%;
		}
	}
}

